# ZeroCppRefl

./: CMakeLists.txt  README.md
CMake/: Tools.cmake
src/: CMakeLists.txt  main.cpp
src/Core/: Any.h  Any.hpp  CMakeLists.txt  CastOp.hpp  Core.h  Factory.hpp  MakeAny.hpp  OperationTrait.hpp  Reflection.h
src/Core/Factory/: PropertyFactory.h  TypeFactory.h
src/Core/Type/: BoolType.cpp  BoolType.h  ClassType.cpp  ClassType.h  EnumType.h  FloatType.cpp  FloatType.h  IntegerType.cpp  IntegerType.h  StringType.cpp  StringType.h  Type.h  TypeBase.cpp  TypeBase.h
src/Core/Type/Property/: BoolProperpty.cpp  BoolProperpty.h  EnumProperty.cpp  EnumProperty.h  FloatProperpty.cpp  FloatProperpty.h  IntegerProperpty.cpp  IntegerProperpty.h  Property.h  StringProperpty.cpp  StringProperpty.h  StringProperty.cpp
src/Core/Utils/: EnumUtil.h  Misc.hpp  VariableTraits.hpp
